(executable
   (name fos_agent)
   (public_name fos_agent)
   (package fos-agent)
   (modules fos_agent heartbeat evals listeners agent_state utils)
   (libraries cmdliner fos-sdk fos-fim-api apero-core apero-net yaks-common yaks-ocaml lwt logs logs.fmt logs.cli fmt fmt.cli fmt.tty)
   (preprocess (pps lwt_ppx ppx_cstruct ))
)
